--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#000000</color>
+    <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#03DAC5</color>
+        <color name="to_był_colorPrimary">#6200EE</color>
+        <color name="to_był_colorPrimaryDark">#3700B3</color>
+
+    <color name="colorBlack">#0c001e</color>
+    <color name="colorGray">#474747</color>
 </resources>
