--- a/app/src/main/res/layout/fragment_tickets.xml
+++ b/app/src/main/res/layout/fragment_tickets.xml
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="144dp"
         android:layout_marginTop="40dp"
-        android:text="Generate QR"
+        android:text="@string/qrcode_btn_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText" />
 
@@ -40,7 +40,8 @@
         android:layout_marginStart="96dp"
         android:layout_marginTop="32dp"
         android:ems="10"
-        android:hint="Enter QR code string"
+        android:hint="@string/qrcode_input_description"
+        android:importantForAutofill="no"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_tickets" />
@@ -51,6 +52,7 @@
         android:layout_height="284dp"
         android:layout_marginStart="60dp"
         android:layout_marginTop="40dp"
+        android:contentDescription="@string/qrcode_image_container_description"
         android:src="@android:drawable/screen_background_light"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/generateQRButton" />
