--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -12,7 +12,7 @@
 
     <ImageView
         android:id="@+id/login_entrance_image_view"
-        android:contentDescription="@string/loginEntranceImageView"
+        android:contentDescription="@string/login_entrance_image_view"
         app:srcCompat="@drawable/login_entrance"
         android:layout_width="353dp"
         android:layout_height="164dp"
@@ -22,7 +22,7 @@
     <EditText
         android:id="@+id/email"
         android:inputType="textEmailAddress"
-        android:hint="@string/hintTextEmailAddress"
+        android:hint="@string/hint_text_email_address"
         android:importantForAutofill="no"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,7 +32,7 @@
     <EditText
         android:id="@+id/password"
         android:inputType="textPassword"
-        android:hint="@string/hintTextPassword"
+        android:hint="@string/hint_text_password"
         android:importantForAutofill="no"
         app:passwordToggleEnabled="true"
         android:layout_width="match_parent"
@@ -51,7 +51,7 @@
         app:layout_constraintTop_toBottomOf="@+id/password"/>
     <Button
         android:id="@+id/login_btn"
-        android:text="@string/btnTextLogin"
+        android:text="@string/btn_text_login"
         android:importantForAutofill="no"
         android:layout_marginTop="30dp"
         android:layout_width="match_parent"
@@ -62,9 +62,12 @@
 
     <TextView
         android:id="@+id/link_regist"
+        android:text="@string/text_view_login"
+        android:textSize="@dimen/h3"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/textViewLogin"
+        app:layout_constraintVertical_bias="1.0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
