--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -11,4 +11,9 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_tickets"
+        android:orderInCategory="100"
+        android:title="Tickets"
+        app:showAsAction="never" />
 </menu>
