--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -24,6 +24,14 @@
             android:id="@+id/nav_tickets"
             android:icon="@drawable/ic_menu_tickets"
             android:title="@string/menu_tickets" />
+        <item
+            android:id="@+id/nav_accounts"
+            android:icon="@drawable/ic_menu_accounts"
+            android:title="@string/menu_accounts" />
+        <item
+            android:id="@+id/nav_scanner"
+            android:icon="@drawable/ic_menu_scanner"
+            android:title="@string/menu_scanner" />
 
     </group>
 
