--- a/app/src/main/res/layout-w900dp/ticket_list.xml
+++ b/app/src/main/res/layout-w900dp/ticket_list.xml
@@ -18,15 +18,14 @@
 
     <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/item_list"
+        android:id="@+id/ticket_list"
         android:name="com.example.myapplication.ItemListFragment"
         android:layout_width="@dimen/item_width"
         android:layout_height="match_parent"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         app:layoutManager="LinearLayoutManager"
-        tools:context="com.example.myapplication.ItemListActivity"
-        tools:listitem="@layout/item_list_content" />
+        tools:listitem="@layout/ticket_list_content" />
 
     <FrameLayout
         android:id="@+id/item_detail_container"
