--- a/app/src/main/res/layout/ticket_detail.xml
+++ b/app/src/main/res/layout/ticket_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView android:id="@+id/item_detail"
+<ImageView android:id="@+id/ticket_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginStart="10dp"
