--- a/app/src/main/res/layout/scanner_detail.xml
+++ b/app/src/main/res/layout/scanner_detail.xml
@@ -1,12 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:id="@+id/scanner_detail"
-style="?android:attr/textAppearanceLarge"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:layout_marginStart="10dp"
-android:layout_marginTop="10dp"
-android:padding="16dp"
-android:textIsSelectable="true"
-tools:context=".ui.scanner.ScannerFragment" />
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/scanner_detail"
+        style="?android:attr/textAppearanceLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:padding="16dp"
+        android:textIsSelectable="true"
+        android:layout_gravity="center"
+        tools:context=".ui.scanner.ScannerFragment" />
+
+    <Button xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/btn_scan"
+        android:layout_width="300dp"
+        android:layout_height="80dp"
+        android:text="@string/btn_text_scan"
+        android:layout_below="@+id/scanner_detail"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"/>
+
+</LinearLayout>
