--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
 
     <color name="colorBlack">#0c001e</color>
     <color name="colorGray">#474747</color>
+    <color name="colorDirtyWhite">#DFD5D5</color>
 </resources>
