Create events manage section for admin #58

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -32,6 +32,10 @@
             android:id="@+id/nav_scanner"
             android:icon="@drawable/ic_menu_scanner"
             android:title="@string/menu_scanner" />
+        <item
+            android:id="@+id/nav_events_manage"
+            android:icon="@drawable/ic_menu_events_manage"
+            android:title="@string/menu_events_manage" />
     </group>
 
 
