--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -35,4 +35,10 @@
         android:name="com.example.ticket_machine.ui.accounts.AccountsFragment"
         android:label="@string/menu_accounts"
         tools:layout="@layout/fragment_accounts" />
+
+    <fragment
+        android:id="@+id/nav_events_manage"
+        android:name="com.example.ticket_machine.ui.events_manage.EventsManageFragment"
+        android:label="@string/menu_events_manage"
+        tools:layout="@layout/fragment_events_manage" />
 </navigation>
